<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgetPasswordActivity">

    <EditText
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/textbox"
        android:padding="10dp"
        android:gravity="top"
        android:hint="@string/email"
        android:layout_centerInParent="true"
        android:id="@+id/et_email_for_restart"
        android:inputType="textMultiLine"
        android:lines="4"
        android:scrollHorizontally="false"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"/>
    <Button
        android:layout_width="200dp"

        android:layout_height="wrap_content"
        android:layout_below="@id/et_email_for_restart"
        android:layout_marginTop="15dp"
        android:background="@drawable/orangrec"
        android:text="@string/reset"
        android:layout_centerInParent="true"
        android:textColor="#fff"
        android:id="@+id/bt_reset"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/bt_reset"
        android:text="@string/check"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="#000"
        android:id="@+id/et_check"
        android:visibility="gone"
        />

</RelativeLayout>