<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.loin.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_01"
        android:adjustViewBounds="true"
        android:layout_marginBottom="100dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/et_email"
        android:padding="10dp"
        android:backgroundTint="#f29c2b"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_centerInParent="true"
        android:inputType="textPassword"
        android:layout_below="@id/et_email"
        android:id="@+id/et_password"
        android:backgroundTint="#f29c2b"/>

    <Button
        android:layout_margin="20dp"
        android:layout_width="200dp"
        android:layout_centerInParent="true"
        android:layout_height="50dp"
        android:textColor="#fff"
        android:layout_below="@id/et_password"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/loginbutton"
        android:text="@string/login"
        android:id="@+id/login_bt"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_bt"
        android:text="ForgetPassword?"
        android:id="@+id/et_forgetpass"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        />
</LinearLayout>
</ScrollView>
