<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddPhoto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    app:srcCompat="@drawable/closeicon" />

                <TextView
                    android:id="@+id/posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/POST"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/image_added"/>

        <EditText
            android:id="@+id/et_desc"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/textbox"
            android:padding="10dp"
            android:gravity="top"
            android:hint="@string/Description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"/>

        <Spinner
            android:outlineSpotShadowColor="@color/colorPrimaryDark"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:id="@+id/spinner"
            android:layout_height="40dp">
                    </Spinner>

        <EditText
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/textbox"
            android:padding="10dp"
            android:gravity="top"
            android:hint="@string/city"
            android:id="@+id/cityet"
            android:inputType="textMultiLine"
            android:lines="4"
            android:scrollHorizontally="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"/>

    </LinearLayout>

</LinearLayout></ScrollView>